<resources>
    <string name="app_name">Articles App</string>
    <string name="no_data_found">No Data Found</string>
    <string name="socketTimeout">Socket Time Out</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="published_date">Published Date :</string>
    <string name="byline">ByLine :</string>
    <string name="adx_keywords">Adx Keywords :</string>
    <string name="section">Section :</string>
    <string name="subsection">SubSection :</string>
</resources>